Working method bodies, if-else branches, & while loops. Minor refactoring on compiler passes.